JobService and UserService: prefer explicit constructor over @Inject. Add new JobServiceTest class and related changes.